@@ -10,6 +10,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature
   b - fix memory leak in server and mom with MoveJobFile requests
       (backported from 2.3.1)
   b - fix net_server.h build error
+  b - pbs_server doesn't try to "upgrade" .JB files if they come have a newer 
+      version of the job_qs struct
 
 2.2.1
   b - fixed a bug where pbs_server never delete files from the "jobs" directory
